--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -21,7 +21,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Run tests
+        run: npm test
+
       - name: Run benchmark
+        if: success()
         env:
           USER_NAME: ${{ github.actor }}
           GITHUB_REF_NAME: ${{ github.head_ref }}
@@ -31,6 +35,7 @@ jobs:
         run: node generateRankingPage.js
 
       - name: Upload results to S3
+        if: success()
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
