--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Install dependencies
         run: npm install aws-sdk
 
+      - name: Run benchmark
+        run: node benchmark.js
+
       - name: Save result to DynamoDB
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
