--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -20,10 +20,16 @@ jobs:
       - name: Install dependencies
         run: npm install aws-sdk
 
+      - name: Run tests
+        id: tests
+        run: npm test
+
       - name: Run benchmark
+        if: success()
         run: node benchmark.js
 
       - name: Save result to DynamoDB
+        if: success()
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
