--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "aws-sdk": "^2.1692.0",
     "benchmark": "^2.1.4"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
